# dex

./: .gitignore  README.md
dex/: index.html  package-lock.json  package.json  vite.config.js
dex/src/: index.js  style.css
dex/src/app/: AppManager.js
dex/src/commons/: Configs.js  Constants.js  Utils.js
dex/src/components/: CameraManager.js  DexModelManager.js  DexModelVisualiser.js  SceneManager.js  UIMaker.js
dex/src/data/: model_info.arrow
loshdex/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
loshdex/public/: model_info.arrow  model_info.json
loshdex/src/: index.js  main.js  style.css
loshdex/src/app/: AppManager.js
loshdex/src/commons/: Configs.js  Constants.js  Utils.js
loshdex/src/components/: CameraManager.js  DexModelManager.js  DexModelVisualiser.js  ModelManager.js  SceneMaker.js  SceneManager.js  UIMaker.js
notebooks/: loshdex.ipynb
py/: pyproject.toml
py/loshdex/: core.py
redirect/: index.html
scripts/: config_download.py
