[project]
name = "loshdex"
version = "0.0.1"
description = "this is helper for https://github.com/attentionmech/dex project"
authors = [{ name="attentionmech", email="attentionmech@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch==2.5.1",
    "transformers",
    "huggingface_hub",
    "pandas",
    "pyarrow",
    "ipython",
]

[project.scripts]
dex-cli = "loshdex.core:main"

